internal/fixtures/architecture/negative/sdk-provider/packages/sdk/src/bad.ts
import OpenAI from "openai";

export const forbiddenProvider = OpenAI;
